# c-basics-60-minute-blitz

./: Makefile  README.md  new_cpp_game.sh  new_project.sh
cpp/: CMakeLists.txt
cpp/src/: automatic_var.cpp  avoid_copy.cpp
exercises/: README.md  hashmap.c
exercises/arraylist/: arraylist.c
exercises/fn_pointer/: fn_pointer.c
exercises/hashmap/: hashmap.c  hashmap.h
game/: Makefile  README.md
game/src/: waves  waves.c
other/: fn_pointer.c
src/: README.md  grid  grid.c  linked_list.c  linked_list.h  linked_string.c  linked_string.h  pun  pun.c  reverse_file.c  sdl_window.c  string.c  test_linked_list  test_linked_list.c  test_linked_string.c
